--- a/index.html
+++ b/index.html
@@ -161,12 +161,12 @@
 
         @media (max-width: 600px) {
             th:nth-child(3) {
-                width: 35%;
+                width: 40%;
             }
 
             td:nth-child(3) {
                 font-size: 12px;
-                padding: 6px;
+                padding: 5px;
             }
 
             td,
@@ -256,7 +256,7 @@
         <thead>
             <tr>
                 <th class="neon-text">Task</th>
-                <th class="neon-text">CountDown</th>
+                <th class="neon-text">CD</th>
                 <th class="neon-text">DDL</th>
                 <th class="neon-text">重复</th>
                 <th class="neon-text">操作</th>
